replacing String.format() with .formatted()